[package]
name = "polycubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
dashmap = "5.5.0"
heapless = "0.7.16"
ndarray = "0.15.6"
rayon = "1.7.0"
rustc-hash = "1.1.0"

[profile.release]
debug = 2

[profile.test]
opt-level = 3
