[package]
name = "polycubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.0", optional = true }
heapless = "0.7.16"
ndarray = "0.15.6"
pico-args = "0.5.0"
rayon = "1.7.0"
rustc-hash = { version = "1.1.0", optional = true }

[profile.release]
debug = 2

[profile.test]
opt-level = 3

[features]
hash = ["dashmap", "rustc-hash"]
output = []

[dev-dependencies]
rand = "0.8.5"
